--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ header a:active {
 
 
 /* ------------------- MAIN CONTENT ----------------------- */
-section h1 {
+h1 {
     position: relative;
     text-align: center;
     color: #fff;
@@ -70,7 +70,7 @@ section h1 {
     font-size: 4em;
 }
 
-section #title-text {
+#title-text {
     position: relative;
     align-items: center;
     color: #fff;
@@ -78,7 +78,7 @@ section #title-text {
     font-size: 10em;
 }
 
-section p {
+p {
     position: relative;
     color: #fff;
     font-size: 1.8em;
@@ -108,7 +108,7 @@ section p {
     height: 720px;
 }
 
-#video-title {
+.lesser-title {
         color: #fff;
         text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
         font-size: 2em;
