--- a/factions.css
+++ b/factions.css
@@ -3,17 +3,28 @@
     flex-wrap: wrap;
 }
 
-.hognaut-class-left,
-.hognaut-class-right {
-    width: 50%;
+.hognaut-class {
+    width: 100%;
     box-sizing: border-box;
-    padding: 20px;
+    padding-left: 25%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+.chimp-class {
+    width: 100%;
+    box-sizing: border-box;
+    padding-right: 25%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
 @media only screen and (max-width: 768px) {
 
-    .hognaut-class-left,
-    .hognaut-class-right {
+    .hognaut-class,
+    .chimp-class {
         width: 100%;
     }
 }
