--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ h1 {
 
 p {
     position: relative;
+    padding-left: 10em;
+    padding-right: 10em;
     color: #fff;
     font-size: 1.8em;
 }
@@ -113,6 +115,7 @@ p {
         color: #fff;
         text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
         font-size: 2em;
+        padding: 0;
 }
 
 /* ----------------------- FOOTER ------------------------ */
@@ -124,7 +127,6 @@ footer {
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 0px 30px 20px;
 }
 
 .social-icons {
@@ -134,8 +136,8 @@ footer {
 
 .social-icons a {
     text-decoration: none;
-    padding: 15px;
-    margin: 10px;
+    padding: 10px;
+    margin: 0px;
     border-radius: 50%;
     border-color: #ff88f9;
 }
@@ -152,9 +154,10 @@ footer {
     text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
 }
 
-.footer-bottom {
+.footer-bottom p {
     display: flex;
     justify-content: center;
     color: #ff88f9;
+    font-size: 20px;
     padding: 0px 0px 50px;
 }
