--- a/play.css
+++ b/play.css
@@ -77,3 +77,14 @@ input[type=password]:focus {
 .password-reset-class:active {
     cursor: url(images/supernova.png), auto;
 }
+
+/* Countdown Timer */
+.countdown-timer {
+    background-color: #000;
+    padding-top: 10px;
+    display: flex; 
+    justify-content: center;
+    color: rgb(255, 255, 255); 
+    text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;
+    font-size: 30;
+}
