Added sliding info-boxes to faction page, and additional story content

--- a/factions.css
+++ b/factions.css
@@ -3,38 +3,53 @@
     flex-wrap: wrap;
 }
 
-main {
-    text-align: center;
-}
-
-.lesser-title {
-    text-align: center;
-    margin-left: 40px;
-}
-
-.hognaut-class {
-    border-color: white;
-    border-width: 2px;
-    background-color: rgb(34, 15, 31);
-    width: 100%;
-    margin: 5%;
-    padding-left: 20%;
+.character-container {
+    background-color: #000;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    padding: 10px;
+    z-index: 1000;
 }
 
-.chimp-class {
-    background-color: rgb(34, 34, 15);
-    width: 100%;
-    margin: 5%;
-    padding-right: 25%;
-    display: flex;
-    align-items: center;
+.character {
+    position: relative;
+    margin: 60px 0;
 }
 
-@media only screen and (max-width: 768px) {
-    .hognaut-class,
-    .chimp-class {
-        width: 100%;
-    }
+.character img {
+    border-radius: 50%;
+    width: 500px;
+    transition: transform 0.5s ease;
+    border: 1px solid #ff88f9;
+    box-shadow: 0 0 20px rgba(255, 62, 239, 1);
+}
+
+.character .info-box {
+    position: absolute;
+    right: 10px;
+    top: 0;
+    opacity: 0;
+    background-color: #1f1f1f;
+    border-radius: 8px;
+    color: white;
+    padding: 10px;
+    border: 1px solid #fffbda;
+    box-shadow: 0 0 20px rgb(255, 251, 0);
+    transition: opacity 0.3s ease, width 0.3s ease, left 0.5s ease;
+    overflow: hidden;
+    height: 100%;
+}
+
+.character:hover img {
+    transform: translateX(-600px);
+    /* Move image left to reveal info box */
+}
+
+.character:hover .info-box {
+    opacity: 1;
+    width: 900px;
+    /* Desired width of the info box */
+    left: 0vh;
+    /* Aligns the info-box with the left side of the character div */
 }
