--- a/index.css
+++ b/index.css
@@ -52,7 +52,9 @@ header {
 
 header a {
     color: #ff88f9;
-    font-size: 2em;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
     padding: 2px 20px;
     text-decoration: none;
     text-align: center;
@@ -125,10 +127,10 @@ header a:active {
 }
 
 .lesser-title {
-        color: #fff;
-        text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
-        font-size: 2em;
-        padding: 0;
+    color: #fff;
+    text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
+    font-size: 2em;
+    padding: 0;
 }
 
 /* ----------------------- FOOTER ------------------------ */
