--- a/factions.css
+++ b/factions.css
@@ -3,6 +3,21 @@
     flex-wrap: wrap;
 }
 
+.faction-page-title {
+    font-family: 'Orbitron', sans-serif;
+    background-color: rgb(31, 6, 21);
+    padding: 10px;
+    border-top: #ff47c2 2px solid;
+    border-bottom: #ff47c2 2px solid;
+    box-shadow: 0 0px 8px #ff88f9, 0px 5px 65px #471945;
+    position: relative;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
+    font-size: 6em;
+    font-weight: 600;
+}
+
 .faction-title {
     font-family: 'Orbitron', sans-serif;
     color: #fff;
