--- a/register.css
+++ b/register.css
@@ -38,42 +38,63 @@ body {
     cursor: url(images/spaceship.png), auto;
 }
 
+
+.register-header {
+    background: #000 url('./images/Pig-Cafe.png') center / cover;
+    text-align: center;
+    padding: 80px 0;
+    color: white;
+    height: 570px;
+    border-bottom: 0px solid #ff47c2;
+    border-radius: 10px;
+    margin-bottom: 0px;
+    box-shadow: 0 10px 50px -10px #471945;
+}   
+
 .container {
-    max-width: 660px;
-    min-height: 480px;
+    max-width: 560px;
+    min-height: 380px;
     margin: 0 auto;
     padding: 0 20px;
 }
 
-.register-header {
-    background: #000 url(./images/HG-Concept-Screenshot.jpg)
-    center / cover;
-    text-align: center;
-    padding: 70px 0;
-    color: white;
-    border-bottom: 0px solid #ff47c2;
-    border-radius: 10px;
-    /* box-shadow: 0 0 10px #ff47c2, 0 0 15px #ff88f9; */
-    box-shadow: 0 10px 50px -10px #471945;
-}   
-
 .register-title {
     font-family: 'Orbitron', sans-serif;
     font-weight: 700;
+    padding-bottom: 10px;
     text-shadow: 0 0 30px #ff47c2, 0 0 50px #ff88f9;
-    font-size: 5em;
+    box-shadow: 0 10px 20px #020202, 0px 10px 50px #471945;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-size: 6em;
     line-height: 1.2em;
-    transform: skewY(-5deg);
+    transform: skewY(-3deg);
     text-align: center;
 }
 
-.register-header p {
-    font-size: 18px;
-    max-width: 540px;
-    margin: 0 auto;
+/* Countdown Timer */
+.timer-label {
+    font-family: 'Orbitron', sans-serif;
+    color: rgb(255, 255, 255);
+    text-shadow: 0 0 10px yellow, 0 0 20px #fff788;
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+    font-size: 50px;
+    font-weight: 900;
 }
 
-#register-form {
+.countdown-timer #timer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+    text-shadow: 0 0 10px yellow, 0 0 20px #fff788;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 60px;
+    font-weight: 600;
+    margin-top: -20px;
+}
+
+/* #register-form {
     background-color: #191320;
     border-radius: 8px;
     padding: 30px;
@@ -81,7 +102,7 @@ body {
     font-size: 20px;
     position: relative;
     box-shadow: 0 8px 15px #020202, 0px 10px 50px #471945;
-}
+} */
 
 form input {
     cursor: url(images/spaceship.png), auto;
@@ -138,6 +159,97 @@ form .register-button:hover {
 
 form .register-button:active {
     cursor: url(images/supernova.png), auto;
+}
+
+/* Mailchimp CSS */
+form .mc-field-group {
+    margin-bottom: 10px;
+}
+
+#mc_embed_shell {
+    max-width: 560px;
+    min-height: 180px;
+    margin: 0 auto;
+    padding: 0 20px;
+    background-color: #191320;
+    border-radius: 8px;
+    padding: 30px;
+    margin: -90px 0 0px;
+    font-size: 20px;
+    position: relative;
+    box-shadow: 0 8px 15px #020202, 0px 10px 50px #471945;
+}
+
+form input + .mce_inline_error {   /* input + means that this only applies if there is input immediately after class and ensures style doesnt go to other class */
+    display: inline-block;
+    font-size: 0.6em;
+    position: relative;
+    background: red;
+}
+
+form input + .mce_inline_error:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid #6B0505;
+    position: absolute;
+    top: -10px;
+} 
+
+/* Successfully Registered Popup CSS */
+#mce-success-response {
+    font-family: "Orbitron";
+    background-color: yellow;
+    box-shadow: 0 8px 15px #020202, 0px 10px 50px #606918;
+    padding: 20px;
+    text-align: center;
+    color: black;
+    border-radius: 5px;
+    transition: 1s;
+    animation: response 1s forwards;
+}
+
+/* Already Registered Error CSS */
+#mce-error-response {
+    font-family: "Orbitron";
+    background-color: #6B0505;
+    box-shadow: 0 8px 15px #020202, 0px 10px 50px #851818;
+    padding: 25px;
+    text-align: center;
+    color: #fff;
+    border-radius: 5px;
+    transition: 1s;
+    animation: response 1s forwards;
+}
+
+form #mce-error-response a {
+    color: yellow;
+}
+
+form label .asterisk {
+    color: #fff;
+    text-shadow: 0 0 5px #ff00bf, 0 0 10px #ff88f9;
+    font-size: 0.6em;
+    vertical-align: super;
+}
+
+@keyframes response {
+    0%{
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@media (max-width: 768px) {
+    .register-header {
+        padding: 80px 0;
+    }
 }
 
 /* ------------------------ FOOTER & SOCIAL ICONS -----------------------  */
