--- a/register.css
+++ b/register.css
@@ -94,16 +94,6 @@ body {
     margin-top: -20px;
 }
 
-/* #register-form {
-    background-color: #191320;
-    border-radius: 8px;
-    padding: 30px;
-    margin: -90px 0 0px;
-    font-size: 20px;
-    position: relative;
-    box-shadow: 0 8px 15px #020202, 0px 10px 50px #471945;
-} */
-
 form input {
     cursor: url(images/spaceship.png), auto;
     display: block;
@@ -294,4 +284,71 @@ form label .asterisk {
     color: #ff88f9;
     font-size: 20px;
     padding: 0px 0px 50px;
+}
+
+
+/* ----------------------- MOBILE SUPPORT ---------------------- */
+@media screen and (max-width: 768px) {
+    .navbar {
+        padding: 10px;
+        z-index: 1000;
+    }
+    
+    header a {
+        font-size: 10px;
+        padding: 5px 10px;
+    }
+    
+    .register-header {
+        padding: 40px 0;
+        height: auto;
+        margin-bottom: 20px;
+        box-shadow: none;
+    }
+
+    .container {
+        max-width: 100%;
+        padding: 0 10px;
+    }
+
+    .register-title {
+        font-size: 3em;
+        padding-bottom: 5px;
+        text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
+        box-shadow: none;
+    }
+
+    .timer-label {
+        font-size: 30px;
+    }
+
+    .countdown-timer #timer {
+        font-size: 40px;
+    }
+
+    form input {
+        width: 90%;
+        height: 35px;
+        font-size: 18px;
+    }
+
+    form .register-button {
+        max-width: 200px;
+        margin: 20px auto -30px;
+    }
+
+    .footer-class {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .social-icons a {
+        font-size: 1.5em;
+        padding: 8px;
+    }
+    
+    .footer-bottom p {
+        font-size: 16px;
+        padding: 20px 0;
+    }
 }
