--- a/factions.css
+++ b/factions.css
@@ -3,10 +3,20 @@
     flex-wrap: wrap;
 }
 
+.navbar {
+    position: sticky;
+    z-index: 1000;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding-bottom: 30px;
+    opacity: 1;
+}
+
 .faction-page-title {
     font-family: 'Orbitron', sans-serif;
     background-color: rgb(31, 6, 21);
-    padding: 10px;
     border-top: #ff47c2 2px solid;
     border-bottom: #ff47c2 2px solid;
     box-shadow: 0 0px 8px #ff88f9, 0px 5px 65px #471945;
@@ -24,7 +34,11 @@
     text-shadow: 0 0 15px rgb(255, 251, 0), 0 0 25px #fffb00;
     font-weight: bold;
     font-size: 3em;
-    padding: 20px;
+}
+
+.lesser-title {
+    font-size: 2.5em;
+    text-shadow: 0 0 15px #ff47c2, 0 0 25px #ff88f9;
 }
 
 .character-container {
@@ -38,7 +52,6 @@
 
 .character {
     position: relative;
-    margin: 60px 0;
 }
 
 .character img {
@@ -65,7 +78,7 @@
     box-shadow: 0 0 20px rgb(255, 251, 0);
     transition: opacity 0.3s ease, width 0.3s ease, left 0.5s ease;
     overflow: hidden;
-    height: 100%;
+    height: 85%;
     width: 0px;
 }
 
@@ -92,7 +105,8 @@
     flex-wrap: wrap;
     justify-content:space-evenly;
     width: 1250px;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
+    margin-top: 50px;
 }
 
 .stat-bar {
